Add a "create & continue" for faster creation of similar issues
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1718351 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/add_issue.html
+++ b/pysteve/www/htdocs/admin/add_issue.html
@@ -22,6 +22,7 @@
     Not sure what the various voting methods are or how they work?
     Check out our <a href="/vote_faq.html"><kbd>vote FAQ</kbd></a>!
 </p>
+       <p id='contd'></p>
  <fieldset>
         <legend>Base data</legend>
     <div class="keyvaluepair">
@@ -62,7 +63,8 @@
         </div>
     </div>
     <div class="keyvaluepair">
-        <input type="button" onclick="createIssue();" value="Create issue" class="btn-green"/>
+        <input type="button" onclick="createIssue();" value="Create issue" class="btn-green"/> &nbsp;
+        <input type="button" onclick="createIssue(null, true);" value="Create & continue" class="btn-purple"/>
     </div>
     </fieldset>
 </div>
