--- a/pysteve/www/htdocs/ballot_dh.html
+++ b/pysteve/www/htdocs/ballot_dh.html
@@ -17,6 +17,7 @@
         <img src="/images/steve_logo.png"/>
     </p>
     <a href="javascript:void(location.href='election.html' + document.location.search);">Back to election front page</a>
+    <h2 id="title"></h2>
 <div class="formbox">
     <p>
         This is a standard D'Hondt (Jefferson) based vote with <span id="cnum">N</span> candidates and
