--- a/www/htdocs/ballot_fpp.html
+++ b/www/htdocs/ballot_fpp.html
@@ -17,6 +17,7 @@
         <img src="/images/steve_logo.png"/>
     </p>
     <a href="javascript:void(location.href='election.html' + document.location.search);">Back to election front page</a>
+    <h2 id="title"></h2>
 <div class="formbox">
     <p>
         This is a standard First Past the Post election. The person/party with the most votes wins the election.
