--- a/www/htdocs/admin/create_election.html
+++ b/www/htdocs/admin/create_election.html
@@ -49,13 +49,13 @@
     <fieldset>
         <legend>Optional information</legend>
             <div class="keyvaluepair">
-        <div class="keyfield">Date election opens (optional):</div>
+        <div class="keyfield">Date election opens:</div>
         <input type="text" name="starts" placeholder="YYYY-MM-DD" id="starts" onfocus="$('#starts').datepicker({
             dateFormat: 'yy-mm-dd'
                });"/><br>
     </div>
     <div class="keyvaluepair">
-        <div class="keyfield">Date election ends (optional):</div>
+        <div class="keyfield">Date election ends:</div>
         <input type="text" name="ends" placeholder="YYYY-MM-DD" id="ends" onfocus="$('#ends').datepicker({
             dateFormat: 'yy-mm-dd'
                });"/><br>
