allow for subject change if proxying a vote
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1728628 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/invite.html
+++ b/pysteve/www/htdocs/admin/invite.html
@@ -72,7 +72,7 @@
         </textarea>
     </div>
     <div class="keyvaluepair">
-        <div class="keyfield">Email address(es) to invite<br/>(one per line):</div>
+        <div class="keyfield">Email address(es) to invite<br/>(one per line, use <kbd>em@il proxypersonname</kbd> for proxy votes):</div>
         <textarea id="emails" style="width: 300px; height: 300px;"></textarea>
     </div>
     <input type="button" value="Send invitation(s)" onclick="sendInvites()"/><br/>
