add spinner when sending out emails
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1728629 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/invite.html
+++ b/pysteve/www/htdocs/admin/invite.html
@@ -18,9 +18,9 @@
     function removeEmail(code, response, state) {
         if (code == 200) {
             ecount--;
-            document.getElementById('invitestatus').innerHTML = ecount + " emails left to send..."
+            document.getElementById('invitestatus').innerHTML = "<img src='/images/steve_spinner.gif'/><br/><big>" + ecount + " emails left to send...</big>"
             if (ecount == 0) {
-                document.getElementById('invitestatus').innerHTML = "All invites have been sent!"
+                document.getElementById('invitestatus').innerHTML = "<big>All invites have been sent!</big>"
             }
         } else {
             alert(response.message)
