--- a/www/htdocs/admin/invite.html
+++ b/www/htdocs/admin/invite.html
@@ -44,6 +44,8 @@
                 undefined,
                 removeEmail,
                 null)
+            } else {
+                removeEmail(200)
             }
             
         }
