remove bad emails
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1728646 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/admin/invite.html
+++ b/pysteve/www/htdocs/admin/invite.html
@@ -44,6 +44,8 @@
                 undefined,
                 removeEmail,
                 null)
+            } else {
+                removeEmail(200)
             }
             
         }
