--- a/pysteve/www/htdocs/monitor.html
+++ b/pysteve/www/htdocs/monitor.html
@@ -17,9 +17,9 @@
     
 <h2 id="title">Election monitor:</h2>
 <p style="text-align: center;">
-    <big><b>Leave this page open during the entire election. Please don't refresh the page, it does that by itself.<br/>
-    If you disconnect from the Internet or hibernate your machine, it will resume once the connection is re-established, but
-    should you decide to do this, some debug data may be lost.</b></big>
+    <big><b>Leave this page open during the entire election. There is no need to refresh the page, it does that by itself.<br/>
+    If you disconnect from the Internet or hibernate your machine (or close this page), it will resume once the connection is re-established, but
+    should you decide to do this, some debug data could theoretically be lost.</b></big>
 </p>
 
 <div id="preloaderWrapper">
