--- a/www/htdocs/ballot_stv.html
+++ b/www/htdocs/ballot_stv.html
@@ -35,7 +35,7 @@
     candidates up/down on the ballot box list. You may place as many candidates
     in the ballot box as you see fit. If you want to
     remove a single candidate from your ballot box, simply drag the
-    canidate back to the list of remaining candidates to the left.
+    candidate back to the list of remaining candidates to the left.
 </p>
 <div id="preloaderWrapper">
     <img src="/images/steve_spinner.gif"/>
