--- a/www/htdocs/bulk_yna.html
+++ b/www/htdocs/bulk_yna.html
@@ -21,9 +21,12 @@
     <a href="javascript:void(location.href='election.html' + document.location.search);">Back to election front page</a>
 <div class="formbox">
 <p>
-    Here you can perform a quick vote for each of the yes/no issues in this election.
-    Click on yes, no or abstain to cast your vote. Your vote is cast once you click the respective button,
-    and can be changed at any time, as long as the election is still open.
+    Here you can perform a quick vote for each of the yes/no issues in this
+    election. Click on yes, no or abstain to cast your vote. Your vote is cast
+    and registered once you click the respective button, and can be changed at
+    any time, as long as the election is still open. When you vote, an icon will
+    appear next to the vote options to indicate the vote that was recorded by
+    the system.
 </p>
 <div id="preloaderWrapper">
     <img src="/images/steve_spinner.gif"/>
