note that timestamps are browser-local
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1729213 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/monitor.html
+++ b/pysteve/www/htdocs/monitor.html
@@ -22,6 +22,8 @@
     should you decide to do this, some debug data could theoretically be lost.</b></big>
 </p>
 
+<p>Timestamps shown on this page are browser-local (your computer's timezone).</p>
+
 <div id="preloaderWrapper">
     <img src="/images/steve_spinner.gif"/><br/>
         Loading issues, please wait...
