--- a/www/htdocs/monitor.html
+++ b/www/htdocs/monitor.html
@@ -22,6 +22,8 @@
     should you decide to do this, some debug data could theoretically be lost.</b></big>
 </p>
 
+<p>Timestamps shown on this page are browser-local (your computer's timezone).</p>
+
 <div id="preloaderWrapper">
     <img src="/images/steve_spinner.gif"/><br/>
         Loading issues, please wait...
