--- a/www/htdocs/bulk_yna.html
+++ b/www/htdocs/bulk_yna.html
@@ -28,6 +28,7 @@
     appear next to the vote options to indicate the vote that was recorded by
     the system.
 </p>
+<p><b>When you click on a button, your vote is registered immediately. There is no 'done' button here.</b></p>
 <div id="preloaderWrapper">
     <img src="/images/steve_spinner.gif"/>
     <div id="preloader">
