--- a/www/htdocs/ballot_stv.html
+++ b/www/htdocs/ballot_stv.html
@@ -31,7 +31,9 @@
 <p>
     <b>How to vote:</b><br/>
     Drag a candidate from the candidate list to the ballot box to place them in
-    the vote. You can rearrange your votes as you see fit, by dragging
+    the vote. <b>ORDER MATTERS:</b> Put your candidates in the order of your preference,
+    with the first preference at the top, the second below that and so on.
+    You can rearrange your votes as you see fit, by dragging
     candidates up/down on the ballot box list. You may place as many candidates
     in the ballot box as you see fit. If you want to
     remove a single candidate from your ballot box, simply drag the
