more comments from shane
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1729255 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/bulk_yna.html
+++ b/pysteve/www/htdocs/bulk_yna.html
@@ -28,7 +28,7 @@
     appear next to the vote options to indicate the vote that was recorded by
     the system.
 </p>
-<p><b>When you click on a button, your vote is registered immediately. There is no 'done' button here.</b></p>
+<p><b>When you click on a button, your vote is registered immediately. There is no 'done' button here.</b><br/>Also note that this page only lists Yes/No/Abstain issues. There may be other issues in need of your vote on the main election page.</p>
 <div id="preloaderWrapper">
     <img src="/images/steve_spinner.gif"/>
     <div id="preloader">
