--- a/www/htdocs/request_link.html
+++ b/www/htdocs/request_link.html
@@ -41,9 +41,10 @@
         </p>
         <div class="keyvaluepair">
         <div class="keyfield">Email address:</div>
-        
-        <input type="text" id="email" style="width: 200px;"/>
+        <form>
+        <input name="email" type="text" id="email" style="width: 200px;"/>
         <input type="button" class="btn-green" value="Request link" onclick="requestLink();"/>
+        </form>
         </div>
         
     </div>
