try to make things work with safari
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1729572 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/request_link.html
+++ b/pysteve/www/htdocs/request_link.html
@@ -41,9 +41,10 @@
         </p>
         <div class="keyvaluepair">
         <div class="keyfield">Email address:</div>
-        
-        <input type="text" id="email" style="width: 200px;"/>
+        <form>
+        <input name="email" type="text" id="email" style="width: 200px;"/>
         <input type="button" class="btn-green" value="Request link" onclick="requestLink();"/>
+        </form>
         </div>
         
     </div>
