--- a/pysteve/www/htdocs/admin/invite.html
+++ b/pysteve/www/htdocs/admin/invite.html
@@ -78,7 +78,7 @@
         </textarea>
     </div>
     <div class="keyvaluepair">
-        <div class="keyfield">Email address(es) to invite<br/>(one per line, use <kbd>em@il proxypersonname</kbd> for proxy votes):</div>
+        <div class="keyfield">Email address(es) to invite<br/>(one per line, use <kbd>email proxypersonname</kbd> for proxy votes):</div>
         <textarea id="emails" style="width: 300px; height: 300px;"></textarea>
     </div>
     <input type="button" value="Send invitation(s)" onclick="sendInvites()"/><br/>
